--- a/admin/pages/quizzes.html
+++ b/admin/pages/quizzes.html
@@ -11,9 +11,9 @@
     <div class="sidebar">
         <h2>Admin Panel</h2>
         <ul>
-            <li><a href="../index.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li><a href="../index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="users.html"><i class="fas fa-users"></i> Users</a></li>
-            <li><a href="quizzes.html"><i class="fas fa-question-circle"></i> Quizzes</a></li>
+            <li><a href="quizzes.html" class="active"><i class="fas fa-question-circle"></i> Quizzes</a></li>
             <li><a href="challenges.html"><i class="fas fa-trophy"></i> Challenges</a></li>
             <li><a href="withdrawals.html"><i class="fas fa-wallet"></i> Withdrawals</a></li>
             <li><a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
@@ -132,4 +132,4 @@
     <!-- Finally load our app code -->
     <script type="module" src="../js/quizzes.js"></script>
 </body>
-</html> 
+</html>
