--- a/admin/pages/challenges.html
+++ b/admin/pages/challenges.html
@@ -70,10 +70,6 @@
                         <input type="text" id="title" name="title" required>
                     </div>
                     <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-                    <div class="form-group">
                         <label for="entryFee">Entry Fee (₹)</label>
                         <input type="number" id="entryFee" name="entryFee" min="0" value="0" required>
                     </div>
@@ -108,23 +104,80 @@
                             </label>
                         </div>
                     </div>
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="primary-btn">
+                        <i class="fas fa-paper-plane"></i>
+                        Create Challenge
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Edit Challenge Modal -->
+    <div class="modal" id="edit-challenge-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Edit Challenge</h2>
+                <button class="close-btn" id="close-edit-modal">&times;</button>
+            </div>
+            <form id="edit-challenge-form">
+                <div class="form-grid">
                     <div class="form-group">
-                        <label for="startTime">Launch Time</label>
-                        <input type="datetime-local" id="startTime" name="startTime" required>
+                        <label for="edit-title">Challenge Title</label>
+                        <input type="text" id="edit-title" name="title" required>
                     </div>
                     <div class="form-group">
-                        <label for="endTime">End Time</label>
-                        <input type="datetime-local" id="endTime" name="endTime" required>
+                        <label for="edit-entryFee">Entry Fee (₹)</label>
+                        <input type="number" id="edit-entryFee" name="entryFee" min="0" required>
                     </div>
                     <div class="form-group">
-                        <label for="bannerUrl">Banner URL (Optional)</label>
-                        <input type="url" id="bannerUrl" name="bannerUrl">
+                        <label for="edit-prize">Prize Amount (₹)</label>
+                        <input type="number" id="edit-prize" name="prize" min="0" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-maxSpots">Total Spots</label>
+                        <input type="number" id="edit-maxSpots" name="maxSpots" min="1" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-totalWinners">Total Winners</label>
+                        <input type="number" id="edit-totalWinners" name="totalWinners" min="1" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-contestStatus">Contest Status</label>
+                        <div class="status-selector">
+                            <label class="status-option">
+                                <input type="radio" name="edit-contestStatus" value="upcoming">
+                                <span class="status-label upcoming">
+                                    <i class="fas fa-clock"></i>
+                                    Upcoming
+                                </span>
+                            </label>
+                            <label class="status-option">
+                                <input type="radio" name="edit-contestStatus" value="active">
+                                <span class="status-label active">
+                                    <i class="fas fa-play-circle"></i>
+                                    Live Now
+                                </span>
+                            </label>
+                            <label class="status-option">
+                                <input type="radio" name="edit-contestStatus" value="ended">
+                                <span class="status-label ended">
+                                    <i class="fas fa-check-circle"></i>
+                                    Ended
+                                </span>
+                            </label>
+                        </div>
                     </div>
                 </div>
-                <button type="submit" class="primary-btn" style="margin-top: 1.5rem;">
-                    <i class="fas fa-paper-plane"></i>
-                    Create Challenge
-                </button>
+                <div class="modal-footer">
+                    <button type="submit" class="primary-btn">
+                        <i class="fas fa-save"></i>
+                        Save Changes
+                    </button>
+                </div>
             </form>
         </div>
     </div>
@@ -199,7 +252,8 @@
         <span id="toast-message"></span>
     </div>
 
-    <!-- Firebase SDKs and your scripts -->
+    <!-- Firebase configuration and SDKs -->
+    <script type="module" src="../js/firebase-config.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js"></script>
