--- a/wallets/wallet.html
+++ b/wallets/wallet.html
@@ -12,8 +12,11 @@
 
     <!-- Header -->
     <header class="header">
-        <h1>QuizChamp <span class="fire">🔥</span></h1>
+        <h1 class="logo">QuizChamp <span class="fire">🔥</span></h1>
         <nav class="nav-menu">
+            <button class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
             <ul class="nav-links">
                 <li><a href="/Home/home.html">Home</a></li>
                 <li><a href="#" class="active">Wallet</a></li>
@@ -21,6 +24,8 @@
             </ul>
         </nav>
     </header>
+
+    <div class="overlay"></div>
 
     <!-- Main Content -->
     <main class="main-content">
