--- a/Home/home.html
+++ b/Home/home.html
@@ -11,7 +11,7 @@
     <div id="notification" class="notification"></div>
     <!-- Header -->
     <header class="header">
-        <h1>QuizChamp <span class="fire">🔥</span></h1>
+        <h1 class="logo">QuizChamp <span class="fire">🔥</span></h1>
         <nav class="nav-menu">
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
@@ -23,6 +23,8 @@
             </ul>
         </nav>
     </header>
+
+    <div class="overlay"></div>
 
     <!-- Main Content -->
     <main class="main-content">
