--- a/referral/referral.html
+++ b/referral/referral.html
@@ -12,7 +12,7 @@
 
     <!-- Header (will be dynamically loaded or copied from home/wallet) -->
     <header class="header">
-        <h1>QuizChamp <span class="fire">🔥</span></h1>
+        <h1 class="logo">QuizChamp <span class="fire">🔥</span></h1>
         <nav class="nav-menu">
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
@@ -24,6 +24,8 @@
             </ul>
         </nav>
     </header>
+
+    <div class="overlay"></div>
 
     <main class="referral-main-content">
         <div class="referral-container">
