--- a/Home/home.html
+++ b/Home/home.html
@@ -59,7 +59,7 @@
             <div class="particles"></div>
             <div class="horizontal-glow"></div>
             
-            <div class="contest-header">
+            <div class="contest-header hidden-on-win">
                 <div class="category-icon">
                     <i class="fas"></i>
                     <div class="icon-glow"></div>
@@ -84,6 +84,9 @@
                         <span>✨</span>
                     </div>
                 </div>
+
+                <div class="user-stats"></div> <!-- New section for user stats -->
+                <div class="congrats-message"></div> <!-- New section for congrats message -->
 
                 <div class="contest-details">
                     <div class="detail-item entry-fee">
