--- a/Home/quiz/results.html
+++ b/Home/quiz/results.html
@@ -40,8 +40,13 @@
                     </div>
                 </div>
 
-                <div class="winner-info-box">
+                <div id="winner-info-box" class="winner-info-box">
                     Winners will be announced within 24 hours.
+                </div>
+
+                <div id="winners-list-container" class="hidden">
+                    <h2><i class="fas fa-trophy"></i> Top Performers</h2>
+                    <div id="winners-list"></div>
                 </div>
 
                 <div class="answers-breakdown">
