--- a/admin/pages/challenges.html
+++ b/admin/pages/challenges.html
@@ -86,7 +86,7 @@
                         <input type="number" id="totalWinners" name="totalWinners" min="1" value="1" required>
                     </div>
                     <div class="form-group">
-                        <label for="contestStatus">Contest Status</label>
+                        <label>Contest Status</label>
                         <div class="status-selector">
                             <label class="status-option">
                                 <input type="radio" name="contestStatus" value="upcoming" checked>
@@ -146,7 +146,7 @@
                         <input type="number" id="edit-totalWinners" name="totalWinners" min="1" required>
                     </div>
                     <div class="form-group">
-                        <label for="edit-contestStatus">Contest Status</label>
+                        <label>Contest Status</label>
                         <div class="status-selector">
                             <label class="status-option">
                                 <input type="radio" name="edit-contestStatus" value="upcoming">
