--- a/Home/home.html
+++ b/Home/home.html
@@ -87,6 +87,10 @@
 
                 <div class="user-stats"></div> <!-- New section for user stats -->
                 <div class="congrats-message"></div> <!-- New section for congrats message -->
+                <div class="loser-message hidden"></div> <!-- New section for loser message -->
+                <div class="loser-message hidden"></div> <!-- New section for loser message -->
+                <div class="loser-message hidden"></div> <!-- New section for loser message -->
+                <div class="loser-message hidden"></div> <!-- New section for loser message -->
 
                 <div class="contest-details">
                     <div class="detail-item entry-fee">
