--- a/admin/pages/withdrawals.html
+++ b/admin/pages/withdrawals.html
@@ -25,7 +25,7 @@
         <div class="header">
             <h1>Withdrawal Requests</h1>
             <div class="filter-container">
-                <button class="filter-btn active" data-status="pending">Pending</button>
+                <button class="filter-btn" data-status="pending">Pending</button>
                 <button class="filter-btn" data-status="approved">Approved</button>
                 <button class="filter-btn" data-status="rejected">Rejected</button>
                 <button class="filter-btn" data-status="all">All</button>
