--- a/referral/referral.html
+++ b/referral/referral.html
@@ -82,8 +82,8 @@
                 <h3>How It Works:</h3>
                 <ul>
                     <li>1. Share your unique referral code with friends.</li>
-                    <li>2. Your friend signs up using your code.</li>
-                    <li>3. You both get a bonus when your friend makes their first deposit!</li>
+                    <li>2. Your friend signs up and enters your code. They get ₹10 instantly!</li>
+                    <li>3. You get ₹12 in your wallet after your friend plays their first contest!</li>
                 </ul>
             </div>
         </div>
