--- a/Home/home.html
+++ b/Home/home.html
@@ -40,9 +40,10 @@
         </div>
 
         <!-- Error State -->
-        <div class="error-state hidden">
-            <i class="fas fa-exclamation-circle"></i>
-            <p>Failed to load contests. Please try again later.</p>
+        <div class="error-state" style="display: none;">
+            <i class="fas fa-exclamation-triangle"></i>
+            <h3>Failed to Load Contests</h3>
+            <p>Something went wrong. Please check your connection and try again.</p>
             <button class="retry-btn">Retry</button>
         </div>
 
