--- a/wallets/wallet.html
+++ b/wallets/wallet.html
@@ -21,6 +21,7 @@
                 <li><a href="/Home/home.html">Home</a></li>
                 <li><a href="#" class="active">Wallet</a></li>
                 <li><a href="/referral/referral.html">Refer & Earn</a></li>
+                <li><a href="#" id="logout-btn">Logout</a></li>
             </ul>
         </nav>
     </header>
