--- a/Home/home.html
+++ b/Home/home.html
@@ -20,6 +20,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="/wallets/wallet.html">Wallet</a></li>
                 <li><a href="/referral/referral.html">Refer & Earn</a></li>
+                <li><a href="#" id="logout-btn">Logout</a></li>
             </ul>
         </nav>
     </header>
