--- a/referral/referral.html
+++ b/referral/referral.html
@@ -21,6 +21,7 @@
                 <li><a href="/Home/home.html">Home</a></li>
                 <li><a href="/wallets/wallet.html">Wallet</a></li>
                 <li><a href="#" class="active">Refer & Earn</a></li>
+                <li><a href="#" id="logout-btn">Logout</a></li>
             </ul>
         </nav>
     </header>
